# stm32l0-helloworld

./: .openocd.cfg  .prettyc  CMakeLists.txt  README.md  TODO.md  clock.c  clock.h  clog.c  clog.h  configuration.h  crosstool.cmake  device.c  device.h  dma.c  dma.h  gdbinit  gpio.c  gpio.h  lwjson_opts.h  main.c  openocd.cfg  rollup.sh  rtc.c  rtc.h  stm32l071cztx.s  stm32l071cztx_flash.ld  sysmem.c  uaio.c  uaio.h  uart.c  uart.h
clog/: CMakeLists.txt  clog.c  clog.h
cmsis/: core_cm0plus.h
cmsis/stm32l0xx/: system_stm32l0xx.c
cmsis/stm32l0xx/include/: system_stm32l0xx.h
coap/: coap.c
documents/: coap-rfc7252.txt  guides.md
lwjson/: CMakeLists.txt  lwjson.h
rollup/: .gdbinit  crosstool.cmake  gdbinit  openocd.cfg  stm32l0.cfg  stm32l0xx.s  syscalls.c
scripts/: debug.sh  install-toolchain.sh  rollup.sh
stm32/: stm32.cmake  stm32l071xx.h  stm32l0xx.h  stm32l0xx_openocd.cfg  stm32l0xx_system.c  stm32l0xx_system.h
uaio/: generic.h  sleep.c  sleep.h  uaio.c  uaio.h
